<resources>
    <string name="app_name">VirtualBreak</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_break_room">Pausenraum</string>
    <string name="internet_access_required">Internetverbindung benötigt.</string>
    <string name="something_wrong">Es liegt ein Fehler vor...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">LogIn</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_1_hint">Passwort</string>
    <string name="login_submit">Log In</string>
    <string name="reset_password">Passwort zurücksetzen</string>
    <string name="toast_sent_reset_mail">Du erhälst eine Mail, in der du dein Passwort zurücksetzen kannst.</string>
    <string name="login_signin">Noch kein Account? Sign Up!</string>
    <string name="signin_login">Du hast bereits einen Account? Log in!</string>
    <string name="toast_loginFailed">LogIn nicht geklappt. Versuch es nochmal.</string>
    <string name="error_wrongPassword">Falsches Passwort. Versuche es nochmal.</string>
    <string name="toast_enter_mail">Bitte gebe deine Mailadresse ein.</string>
    <string name="toast_enter_pw">Bitte gebe dein Passwort ein.</string>
    <string name="mail_not_verified">Bitte verifiziere deine Mailadresse.</string>
    <string name="signin">SignUp</string>
    <string name="signin_name_hint">Name</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_phone_number_hint">Telefon Nummer</string>
    <string name="signin_password_1_hint">Passwort</string>
    <string name="signin_password_2_hint">Passwort wiederholen</string>
    <string name="signin_submit">Sign up</string>
    <string name="toast_signIn_Failed">Sign Up fehlgeschlagen. Versuche es nochmal.</string>
    <string name="toast_enter_data">Bitte fülle alle Felder aus.</string>
    <string name="toast_pw_different">Die Passwörter stimmen nicht überein.</string>
    <string name="verification_mail_sent">Bitte verifiziere deine Mailadresse. Dann kannst du dich einloggen.</string>
    <string name="verification_mail_failure">Es konnte keine Verifikationsmail versendet werden. Probiere es nochmal.</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_virtualbreak">Wilkommen bei VirtualBreak</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Erstelle einen Account</string>
    <string name="friend_name">Freundes Name</string>
    <string name="group_name">Gruppen Name</string>
    <string name="tab_group">Gruppen</string>
    <string name="tab_friends">Freunde</string>
    <string name="add_friends">Freunde hinzufügen</string>
    <string name="friend_stat">Offline</string>
    <string name="make_group">Erstelle eine Gruppe!</string>
    <string name="hint_group_name">Gruppen Name</string>
    <string name="search_friends">Suche Freunde</string>
    <string name="select_friends">2. Füge ein paar Freunde hinzu:</string>
    <string name="Error_no_friends">Bitte wähle mindestens einen Freund aus!</string>
    <string name="Error_no_groupname">Bitte legen einen Gruppennamen fest!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Für gemeinsame Pausen</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_myprofile">Profil</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="new_group">Neue Gruppe</string>
    <string name="neuer_pausenraum">Neuer Pausenraum</string>
    <string name="willst_du_dich_wirklich_ausloggen">Willst du dich wirklich ausloggen?</string>
    <string name="ja">Ja</string>
    <string name="status">Status setzen:</string>
    <string name="username">Username</string>
    <string name="impressum">Impressum</string>
    <string name="send_message">Senden</string>
    <string name="leave_room">Austreten</string>
    <string name="message">Nachricht</string>
    <string name="joined"> ist beigetreten</string>
    <string name="left"> hat den Raum verlassen</string>
    <string name="toast_enter_message">Bitte gib eine Nachricht ein</string>
    <string name="joined_call"> ist dem Call beigetreten</string>
    <string name="left_call"> hat den Call verlassen</string>
    <string name="win_game">Super, ihr habt das Spiel gewonnen.</string>
    <string name="retry_win">Gleich noch ne Runde...</string>
    <string name="loose_game">Schade, ihr habt das Spiel verloren.</string>
    <string name="retry_loose">Probiert es noch ein mal...</string>
    <string name="word_result">Das Wort war: </string>
    <string name="no_game">Es gibt noch kein Spiel</string>
    <string name="retry_no_game">Starte ein Spiel...</string>
    <string name="annehmen">Annehmen</string>
    <string name="bekommen">Bekommen:</string>
    <string name="freundschaftsanfragen">Freundschaftsanfragen</string>
    <string name="addfriends_intro">Du kannst Freunde mithilfe ihrer E-Mail-Adresse hinzufügen:</string>
    <string name="suche">Suche</string>
    <string name="video_call">Video Call</string>
    <string name="edit">edit</string>
    <string name="rename_room">Pausenname</string>
    <string name="breakroomname">Pausenraum Name</string>
    <string name="breakroomtype">Pausenraum Typ</string>
    <string name="openRoom">Öffne Raum</string>
    <string name="notification_hint">Du bist in der Pause </string>
    <string name="notification_Channel_description">"widget_Notification"</string>
    <string name="startTimer">Übung für alle starten</string>
    <string name="cancelTimer">Übung für alle abbrechen</string>
    <string name="getFitnessActivity">Fitnessübung anzeigen</string>
    <string name="saveQuestion">Frage pinnen</string>
    <string name="question_placeholder">Gebe deine Frage hier ein.</string>
    <string name="search_friend_successful">Gefunden:</string>
    <string name="search_friend_not_successful">Es wurde kein User mit dieser Mail gefunden.</string>
    <string name="searching_for_friend">User wird gesucht...</string>
    <string name="add">Add</string>
    <string name="keine_offenen_freundschaftsanfragen">Keine offenen Freundschaftsanfragen</string>
    <string name="abgeschickt">Abgeschickt:</string>
    <string name="keine_abgeschickten_freundschaftsanfragen">Keine abgeschickten Freundschaftsanfragen</string>
    <string name="suche_freunde">Suche Freunde</string>
    <string name="freundschaftsanfrage_senden">Freundschaftsanfrage senden</string>
    <string name="löschen">Löschen</string>
    <string name="leave_group">Gruppe verlassen</string>
    <string name="delete_group">Gruppename ändern</string>
    <string name="breakroom_alert_text">Wenn du jetzt gehst wird der Pausenraum permanent gelöscht. Willst du das wirklich?</string>
    <string name="breakroom_alert_achtung">Achtung!</string>
    <string name="verlassen">Gehen</string>
    <string name="bleiben">Bleiben</string>
    <string name="nachricht">Nachricht</string>
    <string name="wahl_gruppenname">1. Wähle einen Gruppennamen:</string>
    <string name="willkommen_bei">Willkommen bei</string>
    <string name="virtualbreak">VirtualBreak</string>
    <string name="starte_gemeinsame_virtuelle_pausen">Starte gemeinsame virtuelle Pausen!</string>
    <string name="status_busy_info">Bei \'Beschäftigt\' erhältst du keine Benachrichtigungen zu neuen Pausenräumen</string>
    <string name="toast_already_in_break">Du bist momentan noch in einer Pause und kannst deswegen keine neue erstellen!</string>
    <string name="save_username">Benutzernamen speichern</string>
    <string name="new_name">New name</string>
    <string name="pausenraumtype">PausenraumType</string>
    <string name="pausenraum_name">Pausenraum Name</string>
    <string name="open_rooms">Pausenräume:</string>
    <string name="settings_text">Viel Spaß in gemeinsamen virtuellen Pausen wünscht das VirtualBreak Team:\nManuela Eska, Miriam Halsner, Stefanie Kloß, Jenny Phu\n(MSP Gruppe 4)</string>
    <string name="general">Allgemein:</string>
    <string name="info_text">Diese App entstand im Rahmen des Praktikum Mobile und Verteilte Systeme (MSP) der LMU im WS20/21 unter der Leitung von Prof. Dr. Claudia Linnhoff-Popien, Steffen Illium &amp; Andreas Sedlmeier</string>
    <string name="info_about_us">Über uns:</string>
    <string name="bilderquellen">Bilderquellen:</string>
    <string name="bilderquellen_list">
        - Tea by Vectorstall from the Noun Project\n
        - Game by Adrien Coquet from the Noun Project\n
        - Sport by iconixar from the Noun Project\n
        - Question by Martin Delin from the Noun Project\n
        - <a href="https://storyset.com/people">Illustration by Freepik Storyset</a></string>
    <string name="confirm_leavegroup_text">Willst du die Gruppe wirklich verlassen? Wenn du der/die letzte bist, wird die Gruppe gelöscht.</string>
    <string name="bored_api">Bored API</string>
    <string name="random_activity">Zufällige Aktivität</string>
    <string name="teilen">Teilen</string>
    <string name="boredapi_intro">Langeweile? Probiere die BoredAPI!</string>
    <string name="hangman">Hangman</string>
    <string name="info_eska">
        - 23 Jahre alt\n- 8. Fachsemester Bachelor Medieninformatik mit Anwendungsfach MMI\n- Mein perfektes Heißgetränk: heiße Schokolade</string>
    <string name="info_halsner">
        - 23 Jahre alt\n- 2. (offiziell 1.) Fachsemester Master Medieninformatik mit Anwendungsfach Gestaltung, davor Bachelor Medieninformatik an LMU\n- Mein perfektes Heißgetränk: jede Art von Tee oder heiße Schokolade</string>
    <string name="info_phu">
        - 23 Jahre alt\n- Übergang von Bachelor Medieninformatik zu Master Mensch-Computer-Interaktion\n- Mein perfektes Heißgetränk: Tee oder Kaffee</string>
    <string name="info_kloss">
        - 24 Jahre alt\n- 2. (offiziell 1.) Fachsemester Master Informatik Bachelor in Informatik mit Nebenfach BWL an der LMU\n- Mein perfektes Heißgetränk: English Breakfast mit Honig und Milch</string>
    <string name="ERROR_INVALID_CUSTOM_TOKEN">Das benutzerdefinierte Token-Format ist falsch. Bitte prüfen Sie die Dokumentation.</string>
    <string name="ERROR_CUSTOM_TOKEN_MISMATCH">Das benutzerdefinierte Token korrespondiert mit einem anderen Adressaten.</string>
    <string name="ERROR_INVALID_CREDENTIAL">Der gelieferte Berechtigungsnachweis ist falsch formatiert oder abgelaufen.</string>
    <string name="ERROR_INVALID_EMAIL">Die Mailadresse ist falsch formatiert.</string>
    <string name="ERROR_WRONG_PASSWORD">Ungültiges Passwort.</string>
    <string name="ERROR_USER_MISMATCH">Die angegebenen Anmeldedaten stimmen nicht mit dem zuvor angemeldeten Benutzer überein.</string>
    <string name="ERROR_REQUIRES_RECENT_LOGIN">Dieser Vorgang ist sensibel und erfordert eine aktuelle Authentifizierung. Melden Sie sich erneut an, bevor Sie diese Anfrage versuchen.</string>
    <string name="ERROR_ACCOUNT_EXISTS_WITH_DIFFERENT_CREDENTIAL">Es existiert bereits ein Konto mit dieser Mailadresse</string>
    <string name="ERROR_EMAIL_ALREADY_IN_USE">Es existiert bereits ein Konto mit dieser Mailadresse.</string>
    <string name="ERROR_CREDENTIAL_ALREADY_IN_USE">Dieser Zugangscode ist bereits mit einem anderen Benutzerkonto verknüpft.</string>
    <string name="ERROR_USER_DISABLED">Das Benutzerkonto wurde deaktiviert.</string>
    <string name="ERROR_USER_TOKEN_EXPIRED">Der Benutzer muss sich erneut anmelden.</string>
    <string name="ERROR_USER_NOT_FOUND">Benutzer nicht gefunden. Überprüfe die Mailadresse.</string>
</resources>