<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_navigation_drawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_person_24"
            android:title="@string/menu_myprofile" />

        <item
            android:id="@+id/nav_friendrequests"
            android:icon="@drawable/ic_add_friend"
            android:title="@string/freundschaftsanfragen" />

       <item
            android:id="@+id/nav_logout"
           android:icon="@drawable/ic_door"
           android:title="@string/logout" />


    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/bottom_navigation_drawer" >
        <!-- TODO change icon -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cup_black"
            android:title="@string/impressum"/>
    </group>
</menu>