<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.view_activitys.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/gradient_blue"
        android:padding="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:textColor="@color/darkblue"
            android:gravity="center"
            android:text="@string/virtualbreak"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/starte_gemeinsame_virtuelle_pausen"
            android:textSize="20sp"
            android:gravity="center"/>


        <ImageView
            android:layout_marginVertical="8dp"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_coffee_break"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/log_in"
            style="@style/MySpecialButton"
            android:id="@+id/loginButton"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:id="@+id/signupButton"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>