<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="16dp"
        android:text="@string/breakroom_alert_achtung"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/room_alert_textview"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        android:text="@string/confirm_leavegroup_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/leavegroup_dismiss_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="22dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/leavegroup_dismiss_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/bleiben"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        app:layout_constraintEnd_toStartOf="@+id/leavegroup_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/room_alert_textview" />

    <Button
        android:id="@+id/leavegroup_confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_marginTop="12dp"
        android:text="@string/verlassen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leavegroup_dismiss_button"
        app:layout_constraintTop_toBottomOf="@+id/room_alert_textview" />


</androidx.constraintlayout.widget.ConstraintLayout>