<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    tools:context=".view.view_activitys.SignInActivity">

    <LinearLayout
        android:id="@+id/signin_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signin_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Signin_title"
            android:fontFamily="@font/architects_daughter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textSize="50sp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/singin_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_name_hint"
                android:autofillHints="@string/signin_name_hint"
                android:includeFontPadding="true"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signin_email_hint"
                android:autofillHints="@string/signin_email_hint"
                android:includeFontPadding="true"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password_1"
                android:layout_width="match_parent"
                android:hint="@string/signin_password_1_hint"
                android:autofillHints="@string/signin_password_1_hint"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_password_2"
                android:layout_width="match_parent"
                android:hint="@string/signin_password_2_hint"
                android:autofillHints="@string/signin_password_2_hint"
                android:layout_height="wrap_content"
                android:includeFontPadding="true"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/signin_submit"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/signin_submit"
        android:textAllCaps="false"
        android:textSize="20sp"
        style="@style/MySpecialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin_input"/>

    <TextView
        android:id="@+id/signUp_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/signin_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_submit"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>