<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/friendrequest_outgoing_cardview"
    android:layout_width="match_parent"
    card_view:cardBackgroundColor="@color/light_gray"
    card_view:cardCornerRadius="5dp"
    android:layout_height="110dp"
    android:layout_marginVertical="8dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/friendrequest_outgoing_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_person_24"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        card_view:riv_corner_radius="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_toEndOf="@+id/friendrequest_outgoing_img"
        android:padding="8dp">

        <TextView
            android:id="@+id/friendrequest_outgoing_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/friendrequest_outgoing_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_email_hint"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friendrequest_outgoing_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/löschen"
            android:layout_gravity="end"
            card_view:icon="@drawable/ic_cancel_24"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>



</RelativeLayout>


</com.google.android.material.card.MaterialCardView>